link persian page to origin page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="/profile.jpg">
   <link rel="canonical" href="https://mahdikarami8484.com">
+  <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
+  <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
   <title>Mahdi Karami</title>
 </head>
 
