--- a/fa/index.html
+++ b/fa/index.html
@@ -1,26 +1,35 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- توضیحات صفحه به فارسی -->
   <meta name="description"
-    content="Portfolio of Mahdi Karami – C++ & PHP Developer, Physics Enthusiast, projects in DLL injection, Vue.js, and more.">
+    content="رزومه و نمونه کارهای مهدی کرمی – توسعه‌دهنده C++ و PHP، علاقه‌مند به فیزیک، پروژه‌های DLL Injection، Vue.js و سایر پروژه‌ها.">
+    
+
   <meta name="keywords"
-    content="cpp, html, css, js, ts, laravel, drogon, C++, PHP, Vue.js, DLL Injection, Projects, Programming, Portfolio, CV, resume, mahdikarami, Mahdi Karami, mahdikarami8484, mahdi karami borujeni, مهدی کرمی, مهدی کرمی بروجنی">
-  <meta property="og:title" content="Portfolio | Mahdi Karami">
-  <meta property="og:description" content="Projects in C++, PHP, Vue.js, and more.">
+    content="C++, PHP, Vue.js, DLL Injection, پروژه‌ها, برنامه‌نویسی, رزومه, نمونه‌کار, مهدی کرمی, mahdikarami, mahdikarami8484, مهدی کرمی بروجنی, مهندس, لاراول, جاوااسکریپت, فیزیک, برنامه نویس, نرم افزار">
+    
+  <meta property="og:title" content="رزومه و نمونه کارهای مهدی کرمی">
+  <meta property="og:description" content="نمونه پروژه‌ها در C++, PHP, Vue.js و پروژه‌های دیگر.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="/profile.jpg">
+  <meta property="og:image" content="../profile.jpg">
+  <meta property="og:locale" content="fa_IR"> 
+  
   <link rel="canonical" href="https://mahdikarami8484.com">
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
-  <title>Mahdi Karami</title>
+  
+  <title>رزومه | مهدی کرمی</title>
   <script type="module" crossorigin src="/assets/main-dSgUwtY-.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/main-BxqZu9Yj.css">
 </head>
 
-<body>
+
+<body style="font-family: Vazir;" dir="rtl">
   <!-- HEAD -->
   <header id="head" class="row bg-gray-50 pb-7">
 
@@ -32,28 +41,28 @@
         border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24" src="/profile.jpg" alt="mahdi karami profile">
       </div>
       <div class="text-gray-800 flex flex-col gap-2">
-        <h1 class="text-4xl font-bold">Mahdi Karami</h1>
+        <h1 class="text-4xl font-black">مهدی کرمی</h1>
         <div>
-          <p class="font-medium">Full-Stack Developer</p>
+          <p class="font-medium">توسعه‌دهنده فول‌استک</p>
           <p class="font-normal text-sm text-gray-800">C++ & PHP & Vue.js</p>
-          <p class="text-xs text-gray-700">Physics Enthusiast & Low-Level Projects Fan</p>
+          <p class="text-xs text-gray-700">علاقه‌مند به فیزیک و پروژه‌های low level</p>
         </div>
       </div>
     </div>
 
-    <div class="flex justify-start md:justify-center m-4 gap-3 md:gap-10">
+    <div class="flex justify-start md:justify-center m-4 gap-3 md:gap-10" style="direction: ltr;">
       <div class="cursor-pointer w-36 h-11 bg-teal-300 rounded-md flex 
         items-center 
         justify-center text-white font-bold shadow shadow-gray-300
-        hover:drop-shadow hover:drop-shadow-teal-100 hover:scale-105">
-        <p>Download</p>
+        hover:drop-shadow hover:drop-shadow-teal-100 hover:scale-105 rtl">
+        <p>دانلود رزومه</p>
       </div>
       <a href="https://github.com/mahdikarami8484" target="_blank" class="cursor-pointer w-28 h-11 bg-white rounded-md flex 
         items-center 
         justify-center font-bold shadow shadow-gray-200 gap-2 px-2
-        hover:drop-shadow hover:drop-shadow-gray-200 hover:scale-105">
+        hover:drop-shadow hover:drop-shadow-gray-200 hover:scale-105" style="direction: rtl;">
         <i class="icon github"></i>
-        <p>GitHub</p>
+        <p>گیتهاب</p>
       </a>
     </div>
   </header>
@@ -63,41 +72,41 @@
     <div class="flex flex-wrap justify-between">
       <!-- SKILLS -->
       <section id="skill" class="py-8 px-5 sm:px-10 md:px-32 md:w-1/2 w-full">
-        <h2 class="text-2xl font-medium">Skills</h2>
-        <div class="px-4 py-3 flex flex-col gap-3">
+        <h2 class="text-2xl font-extrabold">مهارت‌ ها</h2>
+        <div class="px-4 py-3 flex flex-col gap-3" style="direction: rtl;">
           <div>
             <div class="flex gap-3 flex-wrap">
               <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank" class="shadow shadow-orange-200 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-orange-400 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-orange-100 hover:scale-105">
                 <i class="icon html"></i>
                 <p class="font-medium">HTML5</p>
               </a>
               <a href="https://en.wikipedia.org/wiki/CSS" target="_blank" class="shadow shadow-blue-200 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-blue-400 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-blue-100 hover:scale-105">
                 <i class="icon css"></i>
                 <p class="font-medium">CSS3</p>
               </a>
               <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank" class="shadow shadow-yellow-100 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-yellow-500 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-yellow-100 hover:scale-105">
                 <i class="icon js"></i>
                 <p class="font-medium">JS</p>
               </a>
               <a href="https://vuejs.org/" target="_blank" class="shadow shadow-emerald-100 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-emerald-400 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-emerald-100 hover:scale-105">
                 <i class="icon vue"></i>
                 <p class="font-medium">Vue.js</p>
               </a>
               <a href="https://tailwindcss.com/" target="_blank" class="shadow shadow-sky-100 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-sky-400 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-sky-100 hover:scale-105">
                 <i class="icon tailwindcss"></i>
                 <p class="font-medium">Tailwind</p>
@@ -108,28 +117,28 @@
             <div class="flex gap-3 flex-wrap">
               <a href="#cpp" class="shadow shadow-blue-200 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-blue-900 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-blue-100 hover:scale-105">
                 <i class="icon cpp"></i>
                 <p class="font-medium">C++</p>
               </a>
               <a href="https://www.php.net/" class="shadow shadow-indigo-200 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-indigo-400 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-indigo-100 hover:scale-105">
                 <i class="icon php"></i>
                 <p class="font-medium">PHP</p>
               </a>
               <a href="https://laravel.com/" class="shadow shadow-orange-100 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-orange-500 text-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-orange-100 hover:scale-105">
                 <i class="icon laravel"></i>
                 <p class="font-medium">Laravel</p>
               </a>
               <a href="https://drogon.org/" class="shadow shadow-gray-200 px-2 py-1.5 flex items-center 
           justify-center rounded-md bg-white gap-1 
-          cursor-pointer
+          cursor-pointer flex-row-reverse
           hover:drop-shadow hover:drop-shadow-gray-100 hover:scale-105">
                 <i class="icon drogon"></i>
                 <p class="font-medium">Drogon</p>
@@ -143,20 +152,19 @@
 
       <!-- EDUCATION -->
       <section id="Education" class="py-8 px-5 sm:px-10 md:px-32 md:w-1/2 w-full">
-        <h2 class="text-2xl font-medium">Education</h2>
+        <h2 class="text-2xl font-medium">تحصیلات</h2>
         <div class="px-2 py-3 flex flex-col gap-3">
           <div class="shadow shadow-gray-200 rounded-md flex flex-col">
             <div class=" w-full py-5 px-3 md:px-10 rounded-t-md hover:bg-gray-200">
               <div class="flex gap-2 ">
-                <span class="text-gray-900 font-bold">B.Sc.</span>
-                <h3 class="text-gray-900 font-medium">Mechanical Engineering</h3>
+                <span class="text-gray-900 font-bold">کارشناسی</span>
+                <h3 class="text-gray-900 font-medium">مهندسی مکانیک</h3>
                 <div class="bg-yellow-400 text-sm text-white cursor-default
                   rounded-md p-0.5 px-2 font-medium shadow shadow-yellow-200">
-                  <p>Ongoing</p>
+                  <p>در حال تحصیل</p>
                 </div>
               </div>
-              <a href="https://iut.ac.ir" target="_blank" class="text-sm text-gray-700">Isfahan University of
-                Technology</a>
+              <a href="https://iut.ac.ir" target="_blank" class="text-sm text-gray-700">دانشگاه صنعتی اصفهان</a>
             </div>
           </div>
         </div>
@@ -165,7 +173,7 @@
 
     <!-- PROJECTS -->
     <section id="projects" class="py-8 px-5 sm:px-10 md:px-32">
-      <h2 class="text-2xl font-medium">Projects</h2>
+      <h2 class="text-2xl font-medium">پروژه ها</h2>
       <div id="project-container" class="px-2 py-3 flex items-start flex-wrap gap-8 justify-center">
         <!-- PROJECTS_INJECT -->
       </div>
@@ -173,28 +181,28 @@
 
     <!-- INTREST -->
     <section id="interest" class="py-8 px-5 sm:px-10 md:px-32">
-      <h2 class="text-2xl font-medium">Interest</h2>
+      <h2 class="text-2xl font-medium">علاقه مندی ها</h2>
       <div class="flex flex-wrap shadow shadow-gray-200 rounded-md p-3 
       mx-4 mt-4 gap-4 items-center">
         <div class="flex items-center cursor-default gap-1 w-80 ">
           <i class="min-w-12 min-h-12 icon falling-apple "></i>
-          <p class="font-medium">Physics & Fundamental Research</p>
+          <p class="font-medium">فیزیک و پژوهش‌های بنیادی</p>
         </div>
         <div class="flex items-center cursor-default gap-1 w-80">
           <i class="min-w-12 min-h-12 icon space"></i>
-          <p class="font-medium">Astronomy & Stargazing</p>
+          <p class="font-medium">نجوم و رصد ستارگان</p>
         </div>
         <div class="flex items-center cursor-default gap-1 w-80">
           <i class="w-12 h-12 min-w-12 min-h-12 icon coding"></i>
-          <p class="font-medium">Software Development</p>
+          <p class="font-medium">توسعه نرم افزار</p>
         </div>
         <div class="flex items-center cursor-default gap-1 w-80">
           <i class="w-12 h-12 min-w-12 min-h-12 icon cpu"></i>
-          <p class="font-medium">Low-Level Projects</p>
+          <p class="font-medium">پروژه های Low-Level</p>
         </div>
         <div class="flex items-center cursor-default gap-1 w-80">
           <i class="w-12 h-12 min-w-12 min-h-12 icon crayon"></i>
-          <p class="font-medium">Mathematics & Problem Solving</p>
+          <p class="font-medium">ریاضیات و حل مسئله</p>
         </div>
       </div>
 
@@ -202,22 +210,22 @@
 
     <!-- contact -->
     <section id="contact" class="py-8 px-5 sm:px-10 md:px-32">
-      <h2 class="text-2xl font-medium">Contact</h2>
+      <h2 class="text-2xl font-medium">ارتباط با من</h2>
       <div class="flex flex-wrap shadow shadow-gray-200 rounded-md p-3 
       mx-4 mt-4 gap-4 items-center">
-        <div class="flex items-center cursor-default gap-1 w-64">
+        <div class="flex items-center cursor-default gap-1 w-64 ">
           <i class="min-w-8 min-h-8 icon github "></i>
           <a href="https://github.com/mahdikarami8484" target="_blank"
-            class="font-medium text-blue-950">@mahdikarami8484</a>
+            class="font-medium text-blue-950" dir="ltr">@mahdikarami8484</a>
         </div>
         <div class="flex items-center cursor-default gap-1 w-64">
           <i class="min-w-8 min-h-8 icon telegram"></i>
-          <a href="https://t.me/mahdikarami8484" target="_blank" class="font-medium text-blue-950">@mahdikarami8484</a>
+          <a href="https://t.me/mahdikarami8484" target="_blank" class="font-medium text-blue-950" dir="ltr">@mahdikarami8484</a>
         </div>
         <div class="flex items-center cursor-default gap-1 w-64">
           <i class="min-w-8 min-h-8 icon gmail"></i>
           <a href="mailto:mahdikarami8484.ir@gmail.com" target="_blank"
-            class="font-medium text-blue-950">mahdikarami8484.ir@gmail.com</a>
+            class="font-medium text-blue-950" dir="ltr">mahdikarami8484.ir@gmail.com</a>
         </div>
       </div>
 
