--- a/fa/index.html
+++ b/fa/index.html
@@ -37,7 +37,7 @@
       <div class="rounded-full w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24 border-1 
         border-amber-50 bg-cover">
         <img class="rounded-full border-1 
-        border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24" src="/profile.jpg" alt="mahdi karami profile">
+        border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24" src="/profile.jpg" alt="عکس مهدی کرمی">
       </div>
       <div class="text-gray-800 flex flex-col gap-2">
         <h1 class="text-4xl font-black">مهدی کرمی</h1>
