try fix render  blocking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="src/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Portfolio of Mahdi Karami – C++ & PHP Developer, Physics Enthusiast, projects in DLL injection, Vue.js, and more.">
@@ -17,6 +16,19 @@
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
   <title>Mahdi Karami</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    header {
+      height: 60px;
+      background: #333;
+      color: white;
+    }
+  </style>
+  <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
