--- a/fa/index.html
+++ b/fa/index.html
@@ -3,28 +3,40 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="../src/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- توضیحات صفحه به فارسی -->
   <meta name="description"
     content="رزومه و نمونه کارهای مهدی کرمی – توسعه‌دهنده C++ و PHP، علاقه‌مند به فیزیک، پروژه‌های DLL Injection، Vue.js و سایر پروژه‌ها.">
-    
+
 
   <meta name="keywords"
     content="C++, PHP, Vue.js, DLL Injection, پروژه‌ها, برنامه‌نویسی, رزومه, نمونه‌کار, مهدی کرمی, mahdikarami, mahdikarami8484, مهدی کرمی بروجنی, مهندس, لاراول, جاوااسکریپت, فیزیک, برنامه نویس, نرم افزار">
-    
+
   <meta property="og:title" content="رزومه و نمونه کارهای مهدی کرمی">
   <meta property="og:description" content="نمونه پروژه‌ها در C++, PHP, Vue.js و پروژه‌های دیگر.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="../profile.jpg">
-  <meta property="og:locale" content="fa_IR"> 
-  
+  <meta property="og:locale" content="fa_IR">
+
   <link rel="canonical" href="https://mahdikarami8484.com">
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
-  
+
   <title>رزومه | مهدی کرمی</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    header {
+      height: 60px;
+      background: #333;
+      color: white;
+    }
+  </style>
+  <link rel="stylesheet" href="../src/style.css">
 </head>
 
 
@@ -37,7 +49,8 @@
       <div class="rounded-full w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24 border-1 
         border-amber-50 bg-cover">
         <img class="rounded-full border-1 
-        border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24" src="/profile.jpg" alt="عکس مهدی کرمی">
+        border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24 aspect-square" src="/profile.jpg"
+          alt="عکس مهدی کرمی">
       </div>
       <div class="text-gray-800 flex flex-col gap-2">
         <h1 class="text-4xl font-black">مهدی کرمی</h1>
@@ -214,17 +227,18 @@
       mx-4 mt-4 gap-4 items-center">
         <div class="flex items-center cursor-default gap-1 w-64 ">
           <i class="min-w-8 min-h-8 icon github "></i>
-          <a href="https://github.com/mahdikarami8484" target="_blank"
-            class="font-medium text-blue-950" dir="ltr">@mahdikarami8484</a>
+          <a href="https://github.com/mahdikarami8484" target="_blank" class="font-medium text-blue-950"
+            dir="ltr">@mahdikarami8484</a>
         </div>
         <div class="flex items-center cursor-default gap-1 w-64">
           <i class="min-w-8 min-h-8 icon telegram"></i>
-          <a href="https://t.me/mahdikarami8484" target="_blank" class="font-medium text-blue-950" dir="ltr">@mahdikarami8484</a>
+          <a href="https://t.me/mahdikarami8484" target="_blank" class="font-medium text-blue-950"
+            dir="ltr">@mahdikarami8484</a>
         </div>
         <div class="flex items-center cursor-default gap-1 w-64">
           <i class="min-w-8 min-h-8 icon gmail"></i>
-          <a href="mailto:mahdikarami8484.ir@gmail.com" target="_blank"
-            class="font-medium text-blue-950" dir="ltr">mahdikarami8484.ir@gmail.com</a>
+          <a href="mailto:mahdikarami8484.ir@gmail.com" target="_blank" class="font-medium text-blue-950"
+            dir="ltr">mahdikarami8484.ir@gmail.com</a>
         </div>
       </div>
 
