deploy: 59aded19adb8f4a17b96d2891c1c2424c182a521

--- a/fa/index.html
+++ b/fa/index.html
@@ -4,28 +4,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
   <!-- توضیحات صفحه به فارسی -->
   <meta name="description"
     content="رزومه و نمونه کارهای مهدی کرمی – توسعه‌دهنده C++ و PHP، علاقه‌مند به فیزیک، پروژه‌های DLL Injection، Vue.js و سایر پروژه‌ها.">
-    
+
 
   <meta name="keywords"
     content="C++, PHP, Vue.js, DLL Injection, پروژه‌ها, برنامه‌نویسی, رزومه, نمونه‌کار, مهدی کرمی, mahdikarami, mahdikarami8484, مهدی کرمی بروجنی, مهندس, لاراول, جاوااسکریپت, فیزیک, برنامه نویس, نرم افزار">
-    
+
   <meta property="og:title" content="رزومه و نمونه کارهای مهدی کرمی">
   <meta property="og:description" content="نمونه پروژه‌ها در C++, PHP, Vue.js و پروژه‌های دیگر.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="../profile.jpg">
-  <meta property="og:locale" content="fa_IR"> 
-  
+  <meta property="og:locale" content="fa_IR">
+
   <link rel="canonical" href="https://mahdikarami8484.com">
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
-  
+
   <title>رزومه | مهدی کرمی</title>
-  <script type="module" crossorigin src="/assets/main-dSgUwtY-.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-BxqZu9Yj.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    header {
+      height: 60px;
+      background: #333;
+      color: white;
+    }
+  </style>
+  <script type="module" crossorigin src="/assets/main-CKEDekBj.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-Cp6APc_0.css">
 </head>
 
 
@@ -38,7 +50,8 @@
       <div class="rounded-full w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24 border-1 
         border-amber-50 bg-cover">
         <img class="rounded-full border-1 
-        border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24" src="/profile.jpg" alt="عکس مهدی کرمی">
+        border-amber-50 w-24 h-24 md:w-28 md:h-28 min-h-24 min-w-24 aspect-square" src="/profile.jpg"
+          alt="عکس مهدی کرمی">
       </div>
       <div class="text-gray-800 flex flex-col gap-2">
         <h1 class="text-4xl font-black">مهدی کرمی</h1>
@@ -215,17 +228,18 @@
       mx-4 mt-4 gap-4 items-center">
         <div class="flex items-center cursor-default gap-1 w-64 ">
           <i class="min-w-8 min-h-8 icon github "></i>
-          <a href="https://github.com/mahdikarami8484" target="_blank"
-            class="font-medium text-blue-950" dir="ltr">@mahdikarami8484</a>
+          <a href="https://github.com/mahdikarami8484" target="_blank" class="font-medium text-blue-950"
+            dir="ltr">@mahdikarami8484</a>
         </div>
         <div class="flex items-center cursor-default gap-1 w-64">
           <i class="min-w-8 min-h-8 icon telegram"></i>
-          <a href="https://t.me/mahdikarami8484" target="_blank" class="font-medium text-blue-950" dir="ltr">@mahdikarami8484</a>
+          <a href="https://t.me/mahdikarami8484" target="_blank" class="font-medium text-blue-950"
+            dir="ltr">@mahdikarami8484</a>
         </div>
         <div class="flex items-center cursor-default gap-1 w-64">
           <i class="min-w-8 min-h-8 icon gmail"></i>
-          <a href="mailto:mahdikarami8484.ir@gmail.com" target="_blank"
-            class="font-medium text-blue-950" dir="ltr">mahdikarami8484.ir@gmail.com</a>
+          <a href="mailto:mahdikarami8484.ir@gmail.com" target="_blank" class="font-medium text-blue-950"
+            dir="ltr">mahdikarami8484.ir@gmail.com</a>
         </div>
       </div>
 
