--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
   <title>Mahdi Karami</title>
-  <script type="module" crossorigin src="/assets/main-dSgUwtY-.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-BxqZu9Yj.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    header {
+      height: 60px;
+      background: #333;
+      color: white;
+    }
+  </style>
+  <script type="module" crossorigin src="/assets/main-CKEDekBj.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-Cp6APc_0.css">
 </head>
 
 <body>
