deploy: 85af24ee13a40a048478e97205068d2b13c65136

--- a/fa/index.html
+++ b/fa/index.html
@@ -24,8 +24,8 @@
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
 
   <title>رزومه | مهدی کرمی</title>
-  <script type="module" crossorigin src="/assets/main-CKEDekBj.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-Cp6APc_0.css">
+  <script type="module" crossorigin src="/assets/main-D4ipJ5P4.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-DoGP2Iwr.css">
 </head>
 
 
@@ -147,6 +147,24 @@
 
             </div>
           </div>
+          <div>
+            <div class="flex gap-3 flex-wrap">
+              <a href="https://www.comsol.com" class="shadow shadow-blue-200 px-2 py-1.5 flex items-center 
+          justify-center rounded-md bg-blue-800 text-white gap-1 
+          cursor-pointer flex-row-reverse
+          hover:drop-shadow hover:drop-shadow-blue-100 hover:scale-105">
+                <i class="icon comsol"></i>
+                <p class="font-medium">Comsol</p>
+              </a>
+              <a href="https://www.solidworks.com" class="shadow shadow-gray-200 px-2 py-1.5 flex items-center 
+          justify-center rounded-md bg-red-800 gap-1 text-white
+          cursor-pointer flex-row-reverse
+          hover:drop-shadow hover:drop-shadow-gray-100 hover:scale-105">
+                <i class="icon solidwork"></i>
+                <p class="font-medium">SolidWork</p>
+              </a>
+            </div>
+          </div>
         </div>
 
       </section>
@@ -178,6 +196,21 @@
       <div id="project-container" class="px-2 py-3 flex items-start flex-wrap gap-8 justify-center">
         <!-- PROJECTS_INJECT -->
       </div>
+    </section>
+
+    <!-- ACHIEVEMENTS -->
+    <section id="interest" class="py-8 px-5 sm:px-10 md:px-32">
+      <h2 class="text-2xl font-medium">دستاورد ها</h2>
+      <div class="flex flex-col  flex-wrap shadow shadow-gray-200 rounded-md p-3 
+      mx-4 mt-4 gap-4 items-start">
+        <div class="flex items-center cursor-default gap-1">
+          <i class="min-w-10 min-h-10 icon achievement "></i>
+          <p class="font-medium">رتبه اول در مسابقه جام آبی یزد</p>
+          <p> | </p>
+          <p>به صورت تیمی</p>
+        </div>
+      </div>
+
     </section>
 
     <!-- INTREST -->
