--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
   <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
   <title>Mahdi Karami</title>
-  <script type="module" crossorigin src="/assets/main-CKEDekBj.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-Cp6APc_0.css">
+  <script type="module" crossorigin src="/assets/main-D4ipJ5P4.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-DoGP2Iwr.css">
 </head>
 
 <body>
