fix fa page problem and add add bluecop

--- a/fa/index.html
+++ b/fa/index.html
@@ -19,9 +19,9 @@
   <meta property="og:image" content="../profile.jpg">
   <meta property="og:locale" content="fa_IR">
 
-  <link rel="canonical" href="https://mahdikarami8484.com">
+  <link rel="canonical" href="https://mahdikarami8484.com/fa/">
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
-  <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
+  <link rel="alternate" href="https://mahdikarami8484.com/fa/" hreflang="fa">
 
   <title>رزومه | مهدی کرمی</title>
   <link rel="stylesheet" href="../src/style.css">
@@ -202,12 +202,13 @@
       <h2 class="text-2xl font-medium">دستاورد ها</h2>
       <div class="flex flex-col  flex-wrap shadow shadow-gray-200 rounded-md p-3 
       mx-4 mt-4 gap-4 items-start">
-        <div class="flex items-center cursor-default gap-1">
+        <a href="https://yazdblueclub.com/%d8%ac%d8%a7%d9%85-%d8%a2%d8%a8%db%8c-%db%8c%d8%b2%d8%af/%d8%ac%d8%a7%d9%85-%d8%a2%d8%a8%db%8c-%db%8c%d8%b2%d8%af-%db%b1%db%b4%db%b0%db%b4/" target="_blank"
+         class="flex items-center gap-1 hover:text-blue-700">
           <i class="min-w-10 min-h-10 icon achievement "></i>
           <p class="font-medium">رتبه اول در مسابقه جام آبی یزد</p>
           <p> | </p>
-          <p>به صورت تیمی</p>
-        </div>
+          <p>تیم پاسارگاد</p>
+          </a>
       </div>
 
     </section>
