--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image" content="/profile.jpg">
   <link rel="canonical" href="https://mahdikarami8484.com">
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
-  <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
+  <link rel="alternate" href="https://mahdikarami8484.com/fa/" hreflang="fa">
   <title>Mahdi Karami</title>
   <link rel="stylesheet" href="src/style.css">
 </head>
