deploy: 6160bfd7d6845f4c847bba6b60ffd7d0ee5f6b68

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <meta property="og:image" content="/profile.jpg">
   <link rel="canonical" href="https://mahdikarami8484.com">
   <link rel="alternate" href="https://mahdikarami8484.com" hreflang="en">
-  <link rel="alternate" href="https://mahdikarami8484.com/fa" hreflang="fa">
+  <link rel="alternate" href="https://mahdikarami8484.com/fa/" hreflang="fa">
   <title>Mahdi Karami</title>
-  <script type="module" crossorigin src="/assets/main-D4ipJ5P4.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-DoGP2Iwr.css">
+  <script type="module" crossorigin src="/assets/main-CcdjcvND.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-cwT_sF6G.css">
 </head>
 
 <body>
